--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -20,7 +20,7 @@
                 </a>
                 <a href="/user/logout"> Logout </a>
                 <% } else { %>
-                    <a href="/user/login" class="icon-user"><i class="fa-regular fa-user"></i>  Ingresar</a>
+                    <a href="/user/login" class="icon-user"><i class="fa-regular fa-user"></i> Ingresar</a>
                     <a href="/user/register" class="icon-user">Registrarse</a>
 
                     <% } %>
@@ -39,7 +39,7 @@
                 <a href="/product/list" class="nav-burger-item">Productos</a> <!-- CLASS NAV__ITEM -->
                 <a href="#" class="nav-burger-item">Arma tu PC</a> <!-- CLASS NAV__ITEM -->
                 <a href="#" class="nav-burger-item">PC Armados</a>
-                <a href="#" class="nav-burger-item">Quienes somos</a>
+                <a href="/nosotros" class="nav-burger-item">Nosotros</a>
                 <a href="#" class="nav-burger-item">Ayuda</a> <!-- CLASS NAV__ITEM -->
             </div>
         </div>
@@ -66,9 +66,9 @@
             </div>
         </a>
 
-        <a href="#">
+        <a href="/nosotros">
             <div class="nav-bar-button">
-                <p>Quiénes somos</p>
+                <p>Nosotros</p>
             </div>
         </a>
 
