se modifica la imagen de Jorge en el Nosotros, se añaden nombres en h2

--- a/src/views/nosotros.ejs
+++ b/src/views/nosotros.ejs
@@ -30,6 +30,8 @@
                         <img src="/img/nosotros/julian.png" alt="producto" class="image-userPixel">
                         <div class="container-userPixel">
                             <div class="info-userPixel">
+                                <h2 class="inSale">Julián Salvá</h2>
+                                <br>
                                 <p>
                                     Soy Julián Salvá y tengo 29 años. Nacido y criado en la ciudad Medellín, Colombia,
                                     ingeniero, músico y ahora programador.
@@ -41,6 +43,8 @@
                         <img src="/img/nosotros/eze.png" alt="producto" class="image-userPixel">
                         <div class="container-userPixel">
                             <div class="info-userPixel">
+                                <h2 class="inSale">Ezequiel Muñoz</h2>
+                                <br>
                                 <p>
                                     Me llamo Ezequiel Muñoz, soy de Santa Fe, Argentina tengo 31 años, me gustan los
                                     deportes y los videojuegos.
@@ -52,6 +56,8 @@
                         <img src="/img/nosotros/joaquin.png" alt="producto" class="image-userPixel">
                         <div class="container-userPixel">
                             <div class="info-userPixel">
+                                <h2 class="inSale">Joaquín Palacios</h2>
+                                <br>
                                 <p>
                                     Me llamo Joaquín Palacios, tengo 20 años, nací en Buenos Aires, Argentina, soy desarrollador
                                     web y aficionado del cine y la lectura.
@@ -63,6 +69,8 @@
                         <img src="/img/nosotros/jorge.png" alt="producto" class="image-userPixel-george">
                         <div class="container-userPixel">
                             <div class="info-userPixel">
+                                <h2 class="inSale">Jorge Hernández</h2>
+                                <br>
                                 <p>
                                     Soy Jorge Hernández, tengo 50 años, de Rosario, Santa Fe, diseñador gráfico y
                                     estudiante de programación.
