se añade vista de busqueda de productos, se corrige descripción larga en edición de producto

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -8,8 +8,8 @@
             <a onclick="location.href='/';" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
             <!-- logo-mobile -->
             <a onclick="location.href='/';" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
-            <form action='https://www.google.com/search?q=' method="get" class="search-bar">
-                <input type="text" placeholder="Buscar monitores, teclados, tarjetas de video" name="q">
+            <form action='/product/results' method="get" class="search-bar">
+                <input type="text" placeholder="Buscar monitores, teclados, notebooks" name="keyWord">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         </form>
@@ -24,7 +24,7 @@
                     <a href="/user/register" class="icon-user">Registrarse</a>
 
                     <% } %>
-                        <a href="/user/productCart" class="carrito-icon"><i class="fa badge" value=5>&#xf07a;</i></a>
+                        <a href="/user/productCart" class="carrito-icon"><i class="fa badge" value=2>&#xf07a;</i></a>
         </div>
     </div>
 
